WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73292
[Qt] QQuickWebView gets wrong position after reload
https://bugs.webkit.org/show_bug.cgi?id=73292
Summary
[Qt] QQuickWebView gets wrong position after reload
Kenneth Rohde Christiansen
Reported
2011-11-29 00:49:17 PST
SSIA
Attachments
Patch
(7.97 KB, patch)
2011-11-29 00:52 PST
,
Kenneth Rohde Christiansen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kenneth Rohde Christiansen
Comment 1
2011-11-29 00:52:24 PST
Created
attachment 116913
[details]
Patch
Simon Hausmann
Comment 2
2011-11-29 01:11:03 PST
Comment on
attachment 116913
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=116913&action=review
r=me, but ChangeLog fixes would be nice for landing :)
> Source/WebKit2/ChangeLog:8 > + The ensureContentWithinViewportBoundary, animates the current viewport
Comma not needed here :)
> Source/WebKit2/ChangeLog:9 > + item into boundaries. That ofcourse breaks when we try to animate it,
ofcourse -> of course
Kenneth Rohde Christiansen
Comment 3
2011-11-29 01:16:09 PST
Comment on
attachment 116913
[details]
Patch Landed in
r101339
Csaba Osztrogonác
Comment 4
2011-11-30 03:58:28 PST
Reopen, because it broke Qt-WK2 API tests. before this patch: "TOTALS: 64 passed, 0 failed, 3 skipped" -
http://build.webkit.sed.hu/builders/x86-32%20Linux%20Qt%20Release%20WebKit2/builds/16034/steps/API%20tests/logs/stdio
after this patch: "TOTALS: 3 passed, 1 failed, 0 skipped" -
http://build.webkit.sed.hu/builders/x86-32%20Linux%20Qt%20Release%20WebKit2/builds/16035/steps/API%20tests/logs/stdio
It seems tst_qmltests exits without creating summary.
Simon Hausmann
Comment 5
2011-11-30 06:10:40 PST
(In reply to
comment #4
)
> Reopen, because it broke Qt-WK2 API tests. > > before this patch: "TOTALS: 64 passed, 0 failed, 3 skipped" -
http://build.webkit.sed.hu/builders/x86-32%20Linux%20Qt%20Release%20WebKit2/builds/16034/steps/API%20tests/logs/stdio
> after this patch: "TOTALS: 3 passed, 1 failed, 0 skipped" -
http://build.webkit.sed.hu/builders/x86-32%20Linux%20Qt%20Release%20WebKit2/builds/16035/steps/API%20tests/logs/stdio
> > It seems tst_qmltests exits without creating summary.
I can't reproduce that. I get 63 passed, 2 failed, 4 skipped with ToT. Could this be something fishy on the bot?
Csaba Osztrogonác
Comment 6
2011-11-30 06:36:24 PST
$ WebKitBuild/Release/Source/WebKit2/UIProcess/API/qt/tests/qmltests/tst_qmltests I got the following error on my Ubuntu 11.10 VM: PASS : qmltests::WebViewLoadProgress::cleanupTestCase() Segmentation fault ... Unfortunately I can't produce debug backtrace, because it is a 32 bit machine, and debug build on 32 bit is impossible long time ago. Maybe a release gdb backrace help you: Program received signal SIGSEGV, Segmentation fault. 0x03134657 in QtWebPageProxy::setVisibleContentRectAndScale(QRectF const&, float) () from /storage/WebKit/WebKitBuild/Release/imports/QtWebKit/../../lib/libQtWebKit.so.4 (gdb) bt #0 0x03134657 in QtWebPageProxy::setVisibleContentRectAndScale(QRectF const&, float) () from /storage/WebKit/WebKitBuild/Release/imports/QtWebKit/../../lib/libQtWebKit.so.4 #1 0x030bdf26 in QQuickWebViewPrivate::updateVisibleContentRect() () from /storage/WebKit/WebKitBuild/Release/imports/QtWebKit/../../lib/libQtWebKit.so.4 #2 0x030bdf6b in QQuickWebViewPrivate::_q_resume() () from /storage/WebKit/WebKitBuild/Release/imports/QtWebKit/../../lib/libQtWebKit.so.4 #3 0x030c08c0 in QQuickWebView::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) () from /storage/WebKit/WebKitBuild/Release/imports/QtWebKit/../../lib/libQtWebKit.so.4 #4 0x009e58ab in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/local/Trolltech/Qt5/Qt-5.0.0-r13/lib/libQtCore.so.5 #5 0x03138d15 in WebKit::QtViewportInteractionEngine::contentResumeRequested() () from /storage/WebKit/WebKitBuild/Release/imports/QtWebKit/../../lib/libQtWebKit.so.4 #6 0x0313a6fa in WebKit::QtViewportInteractionEngine::~QtViewportInteractionEngine() () from /storage/WebKit/WebKitBuild/Release/imports/QtWebKit/../../lib/libQtWebKit.so.4 #7 0x0313a792 in WebKit::QtViewportInteractionEngine::~QtViewportInteractionEngine() () from /storage/WebKit/WebKitBuild/Release/imports/QtWebKit/../../lib/libQtWebKit.so.4 #8 0x030c0000 in QQuickWebViewPrivate::~QQuickWebViewPrivate() () from /storage/WebKit/WebKitBuild/Release/imports/QtWebKit/../../lib/libQtWebKit.so.4 #9 0x030bd86c in QQuickWebView::~QQuickWebView() () from /storage/WebKit/WebKitBuild/Release/imports/QtWebKit/../../lib/libQtWebKit.so.4 #10 0x02e652ba in QDeclarativePrivate::QDeclarativeElement<QQuickWebView>::~QDeclarativeElement() () from /storage/WebKit/WebKitBuild/Release/imports/QtWebKit/libqmlwebkitplugin.so #11 0x013fb3f7 in ?? () from /usr/local/Trolltech/Qt5/Qt-5.0.0-r13/lib/libQtDeclarative.so.5 #12 0x0013860e in quick_test_main(int, char**, char const*, QWidget* (*)(), char const*) () from /usr/local/Trolltech/Qt5/Qt-5.0.0-r13/lib/libQtQuickTest.so.5 #13 0x080492eb in main ()
Csaba Osztrogonác
Comment 7
2011-12-07 03:44:22 PST
This regression was fixed by
http://trac.webkit.org/changeset/102142
(
https://bugs.webkit.org/show_bug.cgi?id=73907
)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug